Prepare for pipeline checking